# thriftthelook

./: .env.example  .gitignore  01-thriftthelook-spec.md  LICENSE  README.md  agents.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  config.py  demo.py  ebay.py  llm.py  location.py  main.py  marketplaces.py  models.py  security.py
api/pipeline/: __init__.py  assemble.py  crop.py  decompose.py  narrate.py  rerank.py  run.py
api/tests/: conftest.py  test_assemble.py  test_crop.py  test_demo.py  test_ebay.py  test_llm.py  test_location.py  test_main.py  test_run.py
api/tests/fixtures/: ebay_search.json
plan/: 2026-07-18-winning-video.md
scripts/: crop_compare.py  ebay_smoke.py  record_run.py
web/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: delivery-location.tsx  globals.css  image-upload.ts  layout.tsx  outfit-workbench.tsx  page.tsx  style-profile.tsx
web/tests/: image-upload.test.mts
