[project]
name = "thriftthelook"
version = "0.1.0"
description = "Rebuild an outfit from one photo using secondhand eBay listings."
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "openai>=2.0,<3.0",
  "pydantic-settings>=2.7,<3.0",
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]

[project.optional-dependencies]
vision = [
  "pillow>=10.4,<12.0",
  "ultralytics>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["api/tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"api/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["api"]
